*SVN*

* Don't request a pty by default [Jamis Buck]

* Add a "match" remote dependency method [Adam Greene]

* Allow auth-caching of subversion credentials to be enabled via :scm_auth_cache [tsmith]

* Don't let a task trigger itself when used as the source for an "on" hook [Jamis Buck]

* Avoid using the --password switch with subversion for security purposes [sentinel]

* Add version_dir, current_dir, and shared_dir variables for naming the directories used in deployment [drinkingbird]

* Use Windows-safe binary reads for reading file contents [fukas78]

* Add Accurev SCM support [Doug Barth]

* Use the :runner variable to determine who to sudo as for deploy:restart [Graham Ashton]

* Add Namespaces#top to always return a reference to the topmost namespace [Jamis Buck]

* Change the "-h" output so that it does not say that "-q" is the default [Jamis Buck]


*2.0.0* July 21, 2007

* Make the "no matching servers" error more sane [halorgium]

* Make sure the invoke task gives a sane error when the COMMAND value is omitted [halorgium]

* Make sure variables are conditionally set in the deploy recipes, so as not to clobber values set elsewhere [Jamis Buck]

* Fix "input stream is empty" errors from HighLine on prompt [Jamis Buck]

* Added "synchronous_connect" setting to try and work around SFTP hangs for certain users [Jamis Buck]

* Auto-require the SSH shell service, to avoid race conditions [Jamis Buck]

* Add a millisecond sleep in upload to reduce CPU impact [Jamis Buck]

* Allow the logger to be set via Configuration#logger= [Jamis Buck]

* Allow $CAPISTRANO:HOST$ to be used in filenames to the put command [Jamis Buck]

* Allow execute_on_servers to be called without a current task again [Jamis Buck]

* Put $stdout in sync mode, so that Net::SSH prompts are displayed [Jamis Buck]

* Make sure deploy:check aborts if it fails [Jamis Buck]

* Spelling corrections in docs [Tim Carey-Smith, Giles Bowkett]


*1.99.3 (2.0 Preview 4)* June 28, 2007
